<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DnsQache</string>
    <string name="action_settings">Settings: Proxy</string>
    <string name="text_name_servers">Domain Name Servers</string>
    <string name="default_name_server1">220.67.222.222</string>
    <string name="default_name_server2">220.67.220.220</string>
    <string name="hint_ip_address">IP address (e.g., 8.8.4.4)</string>
    <string name="btn_update_name_servers">Update Name Servers</string>
    <string name="qache_is_running">DNS name caching service</string>
    <string name="binaries_installed">binaries successfully installed.</string>
    <string name="qache_start_script">qachestart.scr</string>
    <string name="app_version_token">Q@Version</string>
    <string name="hint_cache_size">Enter a cache size (default 1000)</string>
    <string name="text_max_cache_size">Maximum DNS Lookups to Cache</string>
    <string name="text_dns_primary">Primary</string>
    <string name="text_dns_secondary">Secondary</string>
    <string name="default_cache_size">1000</string>
    <string name="btn_activateonboot">Activate DnsQache on boot</string>

    <string name="property_dnsmasq_bind_interfaces">bind-interfaces</string>
    <string name="btn_log_queries">Log DNS Queries</string>
    <string name="menu_view_log">View Log</string>
    <string name="menu_about">About</string>
    <string name="title_activity_view_log">ViewLogActivity</string>
    <string name="log_activity_filenotfound">The log file does not (yet) exist.</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="text_qache_start">Click below to start the qache:</string>
    <string name="text_qache_stop">Click below to stop the qache.</string>
    <string name="text_empty"></string>
    <string name="text_no_proxy">No Proxy</string>
    <string name="text_proxy_polipo">Polipo</string>
    <string name="text_proxy_tinyproxy">TinyProxy</string>
    <string name="text_proxy_selection">Proxy</string>
    <string name="prompt_spinner_proxy_type">Select a Local Proxy App</string>
    <string name="res_array_proxy_apps">array_proxy_binaries</string>

    <string name="active">active</string>
    <string name="qache_active">Active</string>
    <string name="state_inactive">Inactive</string>
    
    <string name="property_dnsmasq_primary">dns.primary</string>
    <string name="property_dnsmasq_secondary">dns.secondary</string>
    <string name="property_dnsmasq_cachesize">cache-size</string>
    <string name="property_dnsmasq_interface">interface</string>
    <string name="property_dnsmasq_dhcp_interface">no-dhcp-interface</string>
    <string name="property_dnsmasq_user">user</string>
    <string name="property_log_queries">log-queries</string>
    <string name="property_resolv_file">resolv-file</string>
    <string name="property_pid_file">pid-file</string>

    <string name="default_dns_provider">OpenDNS</string>
    <string name="default_activate_on_boot">false</string>
    
    <string name="local_ip_address_caching">Local IP Address Caching</string>
    <string name="in_cache">In Cache:</string>
    <string name="lookups">Lookups:</string>
    <string name="checkmark">checkmark</string>
    <string name="zero">0</string>
    <string name="clear">Clear</string>
    <string name="info">Info</string>
    <string name="reset">Reset</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="configure">Settings: DNS</string>
    <string name="empty"></string>
    
    <string name="textInfo1"><b>DnsQache</b> stores locally the IP addresses received from DNS servers to reduce network traffic and increase response time.</string>
    <string name="textInfo2"><b>Off/On:</b> To start/stop operation.</string>
    <string name="textInfo3"><b>Configure:</b> To change DNSQache settings.</string>
    <string name="textInfo4"><b>Lookups:</b> Number of successful lookups for cached IP addresses.</string>
    <string name="textInfo5"><b>In Cache:</b> Number of IP addresses currently stored by DnsQache.</string>
    
    <string name="clearMsg">This will clear the local cache and reset the counters.</string>
    <string name="resetMsg">This will set the configuration to the default settings.</string>
    
    <string name="dnsqache_configuration">Configuration Settings</string>
    <string name="cache_size">Cache Size</string>
    <string name="domain_name_server">Domain Name Server</string>
    <string name="dns_primary">Primary</string>
    <string name="dns_secondary">Secondary</string>
    <string name="activateonboot">Start DnsQache on boot</string>
    
    <string name="title_activity_configuration">ConfigurationActivity</string>
    <string name="title_activity_configure">ConfigureActivity</string>
    <string name="default_log_queries">false</string>
    <string name="proxy_configuration">Proxy Configuration Settings</string>
    <string name="text_allowed_cidrs">Allowed CIDRs</string>
    <string name="btn_update_cidrs">Set Allowed CIDRs</string>

    <string-array name="array_dns_provider_names">
        <item>DNSAdvantage</item>
        <item>Google</item>
        <item>Norton</item>
        <item>OpenDNS</item>
        <item>ScrubIT</item>
        <item>Verizon1</item>
        <item>Verizon2</item>
        <item>Verizon3</item>
        <item>Verizon4</item>
        <item>Verizon5</item>
        <item>Other (specify IP address)</item>
    </string-array>
    <string-array name="DNSAdvantage">
        <item>156.154.70.1</item>
        <item>156.154.71.1</item>
    </string-array>
    <string-array name="Google">
        <item>8.8.8.8</item>
        <item>8.8.4.4</item>
    </string-array>
    <string-array name="Norton">
        <item>198.153.192.1</item>
        <item>198.153.194.1</item>
    </string-array>
    <string-array name="OpenDNS">
        <item>208.67.222.222</item>
        <item>208.67.220.220</item>
    </string-array>
    <string-array name="ScrubIT">
        <item>67.138.54.100</item>
        <item>207.225.209.66</item>
    </string-array>
    <string-array name="Verizon1">
        <item>4.2.2.1</item>
        <item>4.2.2.2</item>
    </string-array>
    <string-array name="Verizon2">
        <item>4.2.2.2</item>
        <item>4.2.2.3</item>
    </string-array>
    <string-array name="Verizon3">
        <item>4.2.2.3</item>
        <item>4.2.2.4</item>
    </string-array>
    <string-array name="Verizon4">
        <item>4.2.2.4</item>
        <item>4.2.2.5</item>
    </string-array>
    <string-array name="Verizon5">
        <item>4.2.2.5</item>
        <item>4.2.2.6</item>
    </string-array>

    <string-array name="array_proxy_apps">
        <item>No Proxy</item>
        <item>Polipo Caching Proxy</item>
        <item>TinyProxy (No Caching)</item>
    </string-array>

     <string-array name="array_proxy_binaries">
        <item>none</item>
        <item>polipo</item>
        <item>tinyproxy</item>
	 </string-array>

     <string name="about_layout_version">Version:</string>
     <string name="about_layout_projecthome">Project-Home:</string>
     <string name="about_layout_project_site">http://forum.xda-developers.com/showthread.php?t=2575894</string>
     <string name="about_layout_license">License:</string>
     <string name="about_layout_license_name">GNU General Public License v3</string>
     <string name="about_layout_license_copy">http://www.gnu.org/licenses/gpl.html</string>
     <string name="about_layout_authors">Authors:</string>
     <string name="about_layout_authors_names"><HTML><a href="https://plus.google.com/u/0/107383659668377669605">Tom Hite</a></HTML>"</string>
     <string name="about_layout_contributors">Contributors:</string>
     <string name="about_layout_contributor_names">Bill McGrane</string>
     <string name="about_layout_software">3rd-Party-Software:</string>
     <string name="about_changelog_software">Changelog:</string>
     <string name="about_changelog_detail">\n
         v0.81\n\t\t1. Fixed polipo not starting with default settings;
              \n\t\t2. Changed keyboard on proxy settings page when editing the allowed CIDRS and allow multiple CIDRS comma separated.\n\n
         v0.82\n\t\t1. Fixed bug where the DNS cache size was resetting to 0 (disabled cache).\n\n
         v0.83\n\t\t1. Modified IPTABLES and process model to support custom ROMs refusing to start if port 53 already taken.\n\n
         v0.84\n\t\t1. Added About box;
              \n\t\t2. Fixed cache size resetting to default on reboot of phone.\n\n
     </string>
     <string name="activity_main_about">About</string>
     <string name="activity_main_donate">Donate</string>
     <string name="activity_main_donate_url">http://forum.xda-developers.com/donatetome.php?u=4988866</string>
     <string name="activity_main_close">Close</string>
     <string name="activity_main_donation_headline">Voluntary Donate</string>
     <string name="layout_donate_line1">If you like this application, then please consider a donation to help fund its development.</string>
     <string name="layout_donate_line2">By donating you provide support to an open-source project.</string>
     <string name="layout_donate_line3">Donations do not purchase new applications, rather help the developers continue their work.</string>
     <string name="layout_donate_line4">If you want to donate later, you can do so from the \'About\' dialog.</string>
     <string name="layout_donate_line5">Thank you!</string>
</resources>
