<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingsActivity" >

    <TextView
        android:id="@+id/text_max_cache_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/text_max_cache_size"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/edit_cache_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_cache_size"
        android:inputType="numberDecimal"
        android:singleLine="true" />

    <TextView
        android:id="@+id/text_name_servers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_name_servers"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/spinner_dns_providers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/text_dns_primary" />

        <EditText
            android:id="@+id/name_server1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_ip_address"
            android:inputType="phone"
            android:singleLine="true"
            android:text="@string/default_name_server1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/text_dns_secondary" />

        <EditText
            android:id="@+id/name_server2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_ip_address"
            android:inputType="phone"
            android:singleLine="true"
            android:text="@string/default_name_server2" />
    </LinearLayout>

    <Button
        android:id="@+id/button_set_name_servers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/btn_update_name_servers" />

    <CheckBox
        android:id="@+id/btn_activateonboot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        android:text="@string/btn_activateonboot" />

    <CheckBox
        android:id="@+id/btn_log_queries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        android:text="@string/btn_log_queries" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_proxy_selection" />

        <Spinner
            android:id="@+id/spinner_proxy_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/text_proxy_selection" />

    </LinearLayout>

</LinearLayout>