<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollViewDonate" 
        android:orientation="vertical"
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent">    
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
                <TextView android:text="@string/layout_donate_line1"
                        android:layout_width="fill_parent" 
                        android:layout_height="wrap_content"
                        android:paddingTop="15dp"
                        android:paddingLeft="15dp"
                        android:textStyle="bold"
                        android:textColor="#2e2e2e" />
                <TextView android:layout_width="fill_parent" 
                        android:layout_height="wrap_content"
                        android:paddingTop="15dp"
                        android:paddingLeft="15dp"
                        android:textStyle="bold"
                        android:textColor="#2e2e2e" android:text="@string/layout_donate_line2"/>
                <TextView android:layout_width="fill_parent" 
                        android:layout_height="wrap_content"
                        android:paddingTop="15dp"
                        android:paddingLeft="15dp"
                        android:textStyle="bold"
                        android:textColor="#2e2e2e" android:text="@string/layout_donate_line3"/>                
                <TextView android:layout_width="fill_parent" 
                        android:layout_height="wrap_content"
                        android:paddingTop="15dp"
                        android:paddingLeft="15dp"
                        android:textStyle="bold"
                        android:textColor="#2e2e2e" android:text="@string/layout_donate_line4"/>                        
                <TextView android:layout_width="fill_parent" 
                        android:layout_height="wrap_content"
                        android:textSize="18sp" 
                        android:paddingTop="15dp"
                        android:paddingLeft="15dp"
                        android:textStyle="bold"
                        android:textColor="#2e2e2e" android:text="@string/layout_donate_line5"/>                                                
        </LinearLayout>
</ScrollView>   