<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<ScrollView 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical" >
	            
		<RelativeLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:paddingBottom="12dp"
		    android:paddingLeft="12dp"
		    android:paddingRight="12dp"
		    android:paddingTop="12dp"
		    android:textColor="@color/defaultText"
		    android:focusable="true"
		    android:focusableInTouchMode="true"
		    tools:context=".ConfigureDNSActivity" >
		
		    <TextView
		        android:id="@+id/textView0"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dp"
		        android:layout_alignParentTop="true"
		        android:layout_centerHorizontal="true"
		        android:textStyle="bold|italic"
		        android:textColor="@color/greenText"
		        android:textSize="32sp"
		        android:text="@string/app_name" />
		
		    <TextView
		        android:id="@+id/textView1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dp"
		        android:layout_below="@id/textView0"
		        android:layout_centerHorizontal="true"
		        android:textStyle="bold|italic"
		        android:textColor="@color/dkGrayText"
		        android:textSize="22sp"
		        android:text="@string/dnsqache_configuration" />
		
		    <TextView
		        android:id="@+id/textView2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@id/textView1"
		        android:layout_marginTop="30dp"
		        android:textStyle="bold"
		        android:textSize="18sp"
		        android:text="@string/cache_size" />
		    
		    <EditText
		        android:id="@+id/edit_cache_size"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignBaseline="@id/textView2"
		        android:layout_toRightOf="@id/textView2"
		        android:layout_marginLeft="16dp"
		        android:textSize="18sp"
		        android:ems="4"
		        android:inputType="numberDecimal"
		        android:singleLine="true" />
		
		    <TextView
		        android:id="@+id/textView3"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@id/textView2"
		        android:layout_marginTop="30dp"
		        android:textStyle="bold"
		        android:textSize="18sp"
		        android:text="@string/domain_name_server" />
		    
		    <Spinner
		        android:id="@+id/spinner_dns_providers"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dp"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@id/textView3" />
		    
			<RelativeLayout
			    android:id="@+id/group_name_servers"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:paddingTop="10dp"
			    android:paddingBottom="15dp"
			    android:paddingLeft="10dp"
			    android:paddingRight="15dp" 
		        android:layout_alignParentLeft="true"
		        android:layout_below="@id/spinner_dns_providers"
		        android:layout_marginTop="15dp">
		    
			    <TextView
			        android:id="@+id/textView4"
			        android:layout_width="90dp"
			        android:layout_height="wrap_content"
			        android:layout_alignParentLeft="true"
		            android:layout_marginRight="10dp"
			        android:paddingTop="10sp"
			        android:textSize="16sp"
			        android:textStyle="bold"
			        android:gravity="right"
			        android:text="@string/dns_primary" />
			    
			    <EditText
			        android:id="@+id/proxy_allowed_cidrs"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_alignTop="@id/textView4"
			        android:layout_toRightOf="@id/textView4"
			        android:textSize="18sp"
			        android:ems="8"
			        android:inputType="phone"
			        android:singleLine="true" />
			
			    <TextView
			        android:id="@+id/textView5"
			        android:layout_width="90dp"
			        android:layout_height="wrap_content"
			        android:layout_alignParentLeft="true"
			        android:layout_below="@id/textView4"
			        android:layout_marginTop="10dp"
		            android:layout_marginRight="10dp"
		            android:paddingTop="10sp"
			        android:textSize="16sp"
			        android:textStyle="bold"
			        android:gravity="right"
			        android:text="@string/dns_secondary" />
			    
			    <EditText
			        android:id="@+id/name_server_2"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_alignTop="@id/textView5"
			        android:layout_alignRight="@id/proxy_allowed_cidrs"
			        android:textSize="18sp"
			        android:ems="8"
			        android:inputType="phone"
			        android:singleLine="true" />
		
		    </RelativeLayout>    
		
		    <CheckBox
		        android:id="@+id/checkbox_activateonboot"
		        android:text="@string/activateonboot" 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dp"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@id/group_name_servers"
		        android:textSize="18sp"
		        android:onClick="onClickActivateOnBoot" />

		    <CheckBox
		        android:id="@+id/checkbox_log_queries"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/checkbox_activateonboot"
		        android:onClick="onClickLogQueries"
		        android:text="@string/btn_log_queries" />
		    
		</RelativeLayout>
	
	</ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonReset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:textSize="20sp"
            android:text="@string/reset" 
            android:onClick="onClickReset" />
        <Button
            android:id="@+id/buttonOK"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:textSize="20sp"
            android:text="@android:string/ok"
            android:onClick="onClickOK" />

    </LinearLayout>

</LinearLayout>
